# bloom-filter

./: Cargo.toml  README.md  kathir_bloom_filter.pyi  pyproject.toml
py-bench/: benchmark.py  main.ipynb  perf_plots.ipynb  requirements.txt  simple_bench.ipynb
pytests/: test_bloom_filter.py
src/: bloom_filter.rs  lib.rs  py_bloom_filter.rs
